--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,9 @@
 			<version>3.141.59</version>
 		</dependency>
 	</dependencies>
+	  <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 	<version>0.0.1-SNAPSHOT</version>
 </project>
