--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
 			<version>3.141.59</version>
 		</dependency>
 	</dependencies>
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 	 
 	<version>0.0.1-SNAPSHOT</version>
 </project>
