--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
             <configuration>
                 <source>1.8</source>
                 <target>1.8</target>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
             </configuration>
         </plugin>
     </plugins>
