--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
 				<configuration>
+				<skipTests>${skip.surefire.tests}</skipTests>
 					<parallel>all</parallel>
 					<useUnlimitedThreads>true</useUnlimitedThreads>
 				</configuration>
@@ -24,6 +25,19 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.18.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>					
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
